Make sure toolbox aligns neatly to the right when in stacked mode

--- a/style.css
+++ b/style.css
@@ -261,10 +261,13 @@
 .cbds-detail-line-toolbox--stacked {
 	flex-wrap: wrap;
 }
-.cbds-detail-line-toolbox--stacked .cbds-detail-line-toolbox__tool{
+.cbds-detail-line-toolbox--stacked .cbds-detail-line-toolbox__tool {
 	width: 50%;
 	border-right: 1px solid #ffffff;
 	box-sizing: border-box;
+}
+.cbds-detail-line-toolbox--stacked .cbds-detail-line-toolbox__tool:nth-child(2n) {
+	border-right: none;
 }
 .cbds-detail-line-toolbox__tool {
 	display: block;
